# DevMind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  manage.py  pyproject.toml  pytest.ini  setup.py
cli/: context.py  main.py  streaming.py
cli/commands/: __init__.py  addons.py  audit.py  chat.py  code.py  config.py  doctor.py  fix.py  init.py  plan.py  sanbox.py  status.py  tools.py
core/: __init__.py  orchestrator.py
core/addons/: __init__.py  base.py  loader.py  registry.py
core/agents/: __init__.py  base.py  llm_wrapper.py  registry.py
core/agents/level1_strategic/: architect.py  auditor.py  director.py
core/agents/level2_specialist/: backend.py  database.py  devops.py  frontend.py  qa.py  security.py
core/agents/level3_execution/: __init__.py  coder.py  documenter.py  tester.py  tool_builder.py
core/config/: __init__.py  manager.py  schema.py  wizard.py
core/config/profiles/: default.json  enterprise.json  solo_dev.json
core/memory/: __init__.py  relational_store.py  vector_store.py
core/security/: __init__.py  auditor.py  permissions.py  rules.py  sandbox.py  validator.py
core/self_improvement/: __init__.py  agent_creator.py  capability_validator.py  language_learner.py  tool_builder.py  tool_creator.py
core/tools/: __init__.py  base.py  registry.py
core/tools/builtin/: __init__.py  file_ops.py  shell_ops.py
core/utils/: __init__.py  helpers.py  logger.py
db/: __init__.py  models.py  settings.py  urls.py
tests/unit/: conftest.py  test_config.py  test_relational_search.py  test_sprint_03.py  test_sprint_04.py  test_sprint_05.py  test_sprint_06.py  test_utils_mocks.py
