[project]
name = "devmind"
version = "0.5.0"
description = "Tu ingeniero de software autónomo, ejecutándose 100% en tu máquina"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "DevMind Team", email = "dev@devmind.local"}
]
keywords = ["ai", "autonomous", "development", "ollama", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core
    "django>=6.0.2",
    "django-ninja>=1.5.3",
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    # LLM Local
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    # Memoria Vectorial
    "chromadb>=1.1.1",
    "sentence-transformers>=5.2.3",
    # Base de Datos
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    # CLI
    "click>=8.1.8",
    "rich>=14.3.3",
    "textual>=8.0.1",
    "questionary>=2.1.1",
    # Sandbox y Seguridad
    "docker>=7.1.0",
    "paramiko>=4.0.0",
    # Utilidades
    "aiohttp>=3.13.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pytest-django>=4.12.0",
    "psutil>=7.2.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
devmind = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli", "api", "db"]

[tool.pytest_asyncio]
asyncio_mode = "auto"